Embedded FD, Von Neumann and Reynolds averaging figures

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -417,7 +417,7 @@ Turbulent flows can be considered \textit{stationary} if, on the average, do not
 where $\tau$ is the length of the averaging. For large values of $\tau$, $u_T$ is independent of the initial conditions. A schematic representation can be observed in Figure~\ref{fig:time_averaging}. We observe a constant value given the stationary characteristic of the flow.
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.7\linewidth]{placeholder}
+	\includegraphics[width=0.7\linewidth]{Pictures/ch7_time_averaging}
 	\caption{Time averaging of a stationary flow quantity $u(\vec{x},t).$}
 	\label{fig:time_averaging}
 \end{figure}
@@ -433,7 +433,7 @@ where $u_i({\vec{x},t})$ is the result obtained in the $i$-th experiment. An exa
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.7\linewidth]{placeholder}
+	\includegraphics[width=0.7\linewidth]{Pictures/ch7_ensemble_averaging}
 	\caption{Ensemble averaging results of a non-stationary flow quantity $u(\vec{x},t).$}
 	\label{fig:ensemble_averaging}
 \end{figure}
